--- a/analysis/ExperimentAnalysis.ipynb
+++ b/analysis/ExperimentAnalysis.ipynb
@@ -33,8 +33,8 @@
     "LATENCY_UNIT_PREFIX = \"nano\"\n",
     "# Function to aggregate latency measurements (options: \"mean\", \"min\", \"max\")\n",
     "LATENCY_AGGREGATE_FUNC = \"mean\"\n",
-    "# Latency bin size\n",
-    "LATENCY_BIN = 1"
+    "# Number of latency bins\n",
+    "N_LATENCY_BINS = 100"
    ]
   },
   {
@@ -166,18 +166,19 @@
     "fig = plt.figure(figsize=(8 * len(benchmarks), 12 * len(benchmarks)))\n",
     "for (i, benchmark) in enumerate(benchmarks):\n",
     "  df = get_benchmark_logs_df(benchmark)\n",
-    "  df[\"latency_bin\"] = df.apply(lambda r: (int(r[\"latency\"] * UNIT_PREFIX_FACTOR.get(LATENCY_UNIT_PREFIX, 1)) // LATENCY_BIN) * LATENCY_BIN, axis=1)\n",
+    "  df[\"latency\"] = df.apply(lambda r: int(r[\"latency\"] * UNIT_PREFIX_FACTOR.get(LATENCY_UNIT_PREFIX, 1)), axis=1)\n",
     "  ax = fig.add_subplot(len(benchmarks), 1, i + 1)\n",
     "  ax.grid(alpha=0.75)\n",
     "  ax.set_yscale(\"log\")\n",
-    "  ax.set_xlim((0, df[\"latency_bin\"].max()))\n",
-    "  df[\"latency_bin\"].plot(ax=ax,\n",
-    "                         kind=\"hist\",\n",
-    "                         title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
-    "                         xlabel=\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"),\n",
-    "                         ylabel=\"Count (Executions)\",\n",
-    "                         grid=True,\n",
-    "                         color=\"green\")"
+    "  ax.set_xlim((0, df[\"latency\"].max()))\n",
+    "  df[\"latency\"].plot(ax=ax,\n",
+    "                     bins=N_LATENCY_BINS,\n",
+    "                     kind=\"hist\",\n",
+    "                     title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
+    "                     xlabel=\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"),\n",
+    "                     ylabel=\"Count (Executions)\",\n",
+    "                     grid=True,\n",
+    "                     color=\"green\")"
    ]
   }
  ],
