Fix xlabel of Latency Distribution graph in the notebook.

--- a/analysis/ExperimentAnalysis.ipynb
+++ b/analysis/ExperimentAnalysis.ipynb
@@ -171,12 +171,11 @@
     "  ax.grid(alpha=0.75)\n",
     "  ax.set_yscale(\"log\")\n",
     "  ax.set_xlim((0, df[\"latency\"].max()))\n",
+    "  ax.set_xlabel(\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"))\n",
     "  df[\"latency\"].plot(ax=ax,\n",
     "                     bins=N_LATENCY_BINS,\n",
     "                     kind=\"hist\",\n",
     "                     title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
-    "                     xlabel=\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"),\n",
-    "                     ylabel=\"Count (Executions)\",\n",
     "                     grid=True,\n",
     "                     color=\"green\")"
    ]
