Add a cumulative distribution function (CDF) graph to notebook.

--- a/analysis/ExperimentAnalysis.ipynb
+++ b/analysis/ExperimentAnalysis.ipynb
@@ -30,7 +30,7 @@
     "########## EXECUTION LOGS\n",
     "# Unit prefixes (options: \"milli\", \"micro\", \"nano\")\n",
     "TIMESTAMP_UNIT_PREFIX = \"milli\"\n",
-    "LATENCY_UNIT_PREFIX = \"nano\"\n",
+    "LATENCY_UNIT_PREFIX = \"micro\"\n",
     "# Function to aggregate latency measurements (options: \"mean\", \"min\", \"max\")\n",
     "LATENCY_AGGREGATE_FUNC = \"mean\"\n",
     "# Number of latency bins\n",
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "benchmarks = list_benchmarks()\n",
-    "fig = plt.figure(figsize=(8 * len(benchmarks), 12 * len(benchmarks)))\n",
+    "fig = plt.figure(figsize=(12 * len(benchmarks), 8 * len(benchmarks)))\n",
     "for (i, benchmark) in enumerate(benchmarks):\n",
     "  df = get_benchmark_logs_df(benchmark)\n",
     "  df[\"window\"] = df.apply(lambda r: int(r[\"timestamp\"] * UNIT_PREFIX_FACTOR.get(TIMESTAMP_UNIT_PREFIX, 1)), axis=1)\n",
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "benchmarks = list_benchmarks()\n",
-    "fig = plt.figure(figsize=(8 * len(benchmarks), 12 * len(benchmarks)))\n",
+    "fig = plt.figure(figsize=(12 * len(benchmarks), 8 * len(benchmarks)))\n",
     "for (i, benchmark) in enumerate(benchmarks):\n",
     "  df = get_benchmark_logs_df(benchmark)\n",
     "  df[\"window\"] = df.apply(lambda r: int(r[\"timestamp\"] * UNIT_PREFIX_FACTOR.get(TIMESTAMP_UNIT_PREFIX, 1)), axis=1)\n",
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "benchmarks = list_benchmarks()\n",
-    "fig = plt.figure(figsize=(8 * len(benchmarks), 12 * len(benchmarks)))\n",
+    "fig = plt.figure(figsize=(12 * len(benchmarks), 8 * len(benchmarks)))\n",
     "for (i, benchmark) in enumerate(benchmarks):\n",
     "  df = get_benchmark_logs_df(benchmark)\n",
     "  df[\"latency\"] = df.apply(lambda r: int(r[\"latency\"] * UNIT_PREFIX_FACTOR.get(LATENCY_UNIT_PREFIX, 1)), axis=1)\n",
@@ -175,6 +175,34 @@
     "  df[\"latency\"].plot(ax=ax,\n",
     "                     bins=N_LATENCY_BINS,\n",
     "                     kind=\"hist\",\n",
+    "                     title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
+    "                     grid=True,\n",
+    "                     color=\"green\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a7baf12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmarks = list_benchmarks()\n",
+    "fig = plt.figure(figsize=(12 * len(benchmarks), 8 * len(benchmarks)))\n",
+    "for (i, benchmark) in enumerate(benchmarks):\n",
+    "  df = get_benchmark_logs_df(benchmark)\n",
+    "  df[\"latency\"] = df.apply(lambda r: int(r[\"latency\"] * UNIT_PREFIX_FACTOR.get(LATENCY_UNIT_PREFIX, 1)), axis=1)\n",
+    "  ax = fig.add_subplot(len(benchmarks), 1, i + 1)\n",
+    "  ax.grid(alpha=0.75)\n",
+    "  ax.set_xlim((0, df[\"latency\"].max()))\n",
+    "  ax.set_ylim((0, 1))\n",
+    "  ax.set_xlabel(\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"))\n",
+    "  df[\"latency\"].plot(ax=ax,\n",
+    "                     bins=N_LATENCY_BINS,\n",
+    "                     kind=\"hist\",\n",
+    "                     cumulative=True,\n",
+    "                     density=True,\n",
+    "                     histtype=\"step\",\n",
     "                     title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
     "                     grid=True,\n",
     "                     color=\"green\")"
