Rename variable N_LATENCY_BINS to N_LATENCY_HIST_BINS in notebook.

--- a/analysis/ExperimentAnalysis.ipynb
+++ b/analysis/ExperimentAnalysis.ipynb
@@ -33,8 +33,8 @@
     "LATENCY_UNIT_PREFIX = \"micro\"\n",
     "# Function to aggregate latency measurements (options: \"mean\", \"min\", \"max\")\n",
     "LATENCY_AGGREGATE_FUNC = \"mean\"\n",
-    "# Number of latency bins\n",
-    "N_LATENCY_BINS = 100"
+    "# Number of latency histogram bins\n",
+    "N_LATENCY_HIST_BINS = 100"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "  ax.set_xlim((0, df[\"latency\"].max()))\n",
     "  ax.set_xlabel(\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"))\n",
     "  df[\"latency\"].plot(ax=ax,\n",
-    "                     bins=N_LATENCY_BINS,\n",
+    "                     bins=N_LATENCY_HIST_BINS,\n",
     "                     kind=\"hist\",\n",
     "                     title=\"Latency Distribution: %s benchmark\" % benchmark,\n",
     "                     grid=True,\n",
@@ -198,7 +198,7 @@
     "  ax.set_ylim((0, 1))\n",
     "  ax.set_xlabel(\"Latency (%ss)\" % UNIT_PREFIX_SYMBOL.get(LATENCY_UNIT_PREFIX, \"\"))\n",
     "  df[\"latency\"].plot(ax=ax,\n",
-    "                     bins=N_LATENCY_BINS,\n",
+    "                     bins=N_LATENCY_HIST_BINS,\n",
     "                     kind=\"hist\",\n",
     "                     cumulative=True,\n",
     "                     density=True,\n",
