Add a variable SKIP_N to the notebook for skipping initial rows fofexecution logs.

--- a/analysis/ExperimentAnalysis.ipynb
+++ b/analysis/ExperimentAnalysis.ipynb
@@ -28,6 +28,8 @@
     "EXPERIMENT_DIRPATH = \"sample\"\n",
     "\n",
     "########## EXECUTION LOGS\n",
+    "# Number of data points to be skipped in the beginning\n",
+    "SKIP_N = 1000\n",
     "# Unit prefixes (options: \"milli\", \"micro\", \"nano\")\n",
     "TIMESTAMP_UNIT_PREFIX = \"milli\"\n",
     "LATENCY_UNIT_PREFIX = \"micro\"\n",
@@ -67,7 +69,7 @@
     "# Utilities\n",
     "def get_benchmark_logs_df(benchmark):\n",
     "  df = pd.read_csv(os.path.join(EXPERIMENT_DIRPATH, benchmark + \".csv\"))\n",
-    "  return df\n",
+    "  return df.drop(index=df.index[:SKIP_N])\n",
     "\n",
     "def list_benchmarks():\n",
     "  return [filename.split(\".\")[0] for filename in os.listdir(EXPERIMENT_DIRPATH) if os.path.isfile(os.path.join(EXPERIMENT_DIRPATH, filename)) and filename.endswith(\".csv\")]"
